fixed the alignment of all elements

--- a/static/css/movies.css
+++ b/static/css/movies.css
@@ -84,5 +84,12 @@ h3{
     height: 50px;
 }
 
+div#page-buttons.movie-container{
+    margin: 10px;
+}
+
+.row {
+    justify-content: center;
+}
 
 
